--- a/app/src/main/res/layout/activity_aboute.xml
+++ b/app/src/main/res/layout/activity_aboute.xml
@@ -7,16 +7,25 @@
     tools:context=".ActivityAbout">
     <ImageView
         android:id="@+id/poster"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/wv"/>
+        app:layout_constraintBottom_toTopOf="@id/actors"/>
+
+    <ListView
+        android:id="@+id/actors"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toBottomOf="@id/poster"
+        tools:layout_editor_absoluteX="0dp"></ListView>
+
     <WebView
         android:id="@+id/wv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
