--- a/app/src/main/res/layout/block_film.xml
+++ b/app/src/main/res/layout/block_film.xml
@@ -4,18 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="8dp"
+    >
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="8dp"
-        app:cardElevation="8dp">
+        app:cardElevation="8dp"
+        >
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:background="@drawable/orange">
 
 
             <ImageView
@@ -33,12 +36,14 @@
 
             <TextView
                 android:id="@+id/filmName"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:gravity="center"
                 android:textSize="18dp"
+                android:background="@color/black"
+                android:textColor="@color/white"
                 android:text="TextView"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 app:layout_constraintBottom_toBottomOf="@+id/filmImg"
@@ -48,9 +53,12 @@
 
             <TextView
                 android:id="@+id/filmDate"
-                android:layout_width="match_parent"
+                android:layout_width="100dp"
                 android:layout_height="match_parent"
-                app:layout_constraintTop_toBottomOf="@id/filmName"/>
+                android:background="@color/black"
+                app:layout_constraintTop_toBottomOf="@id/filmName"
+                app:layout_constraintStart_toStartOf="parent"
+                android:textColor="@color/white"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </FrameLayout>
